--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"postcss-cli": "^5.0.1",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
+		"react-icons": "^3.0.1",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "1.1.4",
 		"tailwindcss": "^0.6.4",
