--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"react-icons": "^3.0.1",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "1.1.4",
+		"react-sortable-hoc": "^0.8.3",
+		"react-transition-group": "^2.4.0",
 		"tailwindcss": "^0.6.4",
 		"tonal": "^1.1.3",
 		"tone": "^0.12.80"
