--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"autoprefixer": "^9.0.2",
 		"axios": "^0.18.0",
 		"glhd-tailwindcss-transitions": "^0.3.0",
-		"lodash": "^4.17.10",
 		"midi-writer-js": "^1.5.2",
 		"postcss-cli": "^5.0.1",
 		"react": "^16.4.1",
@@ -17,6 +16,7 @@
 		"react-scripts": "1.1.4",
 		"react-sortable-hoc": "^0.8.3",
 		"react-transition-group": "^2.4.0",
+		"shortid": "^2.2.12",
 		"tailwindcss": "^0.6.4",
 		"tonal": "^1.1.3",
 		"tone": "^0.12.80"
