--- a/package.json
+++ b/package.json
@@ -1,43 +1,120 @@
 {
-	"name": "chord-random",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "http://ghartn.github.io/chord-random",
-	"dependencies": {
-		"autoprefixer": "^9.0.2",
-		"axios": "^0.18.0",
-		"glhd-tailwindcss-transitions": "^0.3.0",
-		"lodash": "^4.17.10",
-		"midi-writer-js": "^1.5.2",
-		"postcss-cli": "^5.0.1",
-		"react": "^16.4.1",
-		"react-dom": "^16.4.1",
-		"react-icons": "^3.0.1",
-		"react-router-dom": "^4.3.1",
-		"react-scripts": "1.1.4",
-		"react-sortable-hoc": "^0.8.3",
-		"react-transition-group": "^2.4.0",
-		"shortid": "^2.2.12",
-		"tailwindcss": "^0.6.4",
-		"tonal": "^1.1.3",
-		"tone": "^0.12.80"
-	},
-	"scripts": {
-		"analyze": "source-map-explorer build/static/js/main.*",
-		"build-style": "postcss src/styles/index.css -o src/index.css",
-		"watch-style": "postcss src/styles/index.css -o src/index.css -w",
-		"start": "npm-run-all -p watch-style start-app",
-		"build": "npm-run-all build-style build-app",
-		"start-app": "react-scripts start",
-		"build-app": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
-	},
-	"devDependencies": {
-		"gh-pages": "^1.2.0",
-		"npm-run-all": "^4.1.3",
-		"source-map-explorer": "^1.5.0"
-	}
+  "name": "chord-random",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "http://ghartn.github.io/chord-random",
+  "dependencies": {
+    "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "glhd-tailwindcss-transitions": "^0.3.0",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "lodash": "^4.17.10",
+    "midi-writer-js": "^1.5.2",
+    "object-assign": "4.1.1",
+    "postcss-cli": "^5.0.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
+    "react": "^16.4.1",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.4.1",
+    "react-icons": "^3.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-sortable-hoc": "^0.8.3",
+    "react-transition-group": "^2.4.0",
+    "resolve": "1.6.0",
+    "shortid": "^2.2.12",
+    "style-loader": "0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "tailwindcss": "^0.6.4",
+    "tonal": "^1.1.3",
+    "tone": "^0.12.80",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
+  },
+  "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "build-style": "postcss src/styles/index.css -o src/index.css",
+    "watch-style": "postcss src/styles/index.css -o src/index.css -w",
+    "start": "npm-run-all -p watch-style start-app",
+    "build": "npm-run-all build-style build-app",
+    "start-app": "node scripts/start.js",
+    "build-app": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0",
+    "npm-run-all": "^4.1.3",
+    "source-map-explorer": "^1.5.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
