--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.4.1",
     "react-icons": "^3.0.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
     "react-sortable-hoc": "^0.8.3",
     "react-transition-group": "^2.4.0",
     "resolve": "1.6.0",
